2017-03-12  Bruno Haible  <bruno@clisp.org>

	Terminate endless loop of mmap_zeromap failures after 10 failures.
	This is useful for NetBSD.
	* spvw_mmap.d (spvw_mmap.d): Abort if it fails 10 times in a row with
	identical arguments and error code.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Fix wrong uses of errno.
	* spvw_garcol.d (gar_col_normal): Save OS_errno around fputs call.
	* spvw_garcol_old.d (gar_col_normal): Likewise.
	* spvw_memfile.d (loadmem_from_handle): Save errno around fprintf call.
	* spvw_mmap.d (mmap_init, mmap_zeromap): Likewise.
	* pathname.d (stat_obj): Save errno before exiting with_sstring_0.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Simplify GC_SAFE_CALL, GC_SAFE_SYSTEM_CALL.
	* lispbibl.d (GC_SAFE_CALL, GC_SAFE_SYSTEM_CALL): Take only 1 argument.
	* pathname.d, stream.d: All callers updated.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Add support for TRIVIALMAP_MEMORY configuration on FreeBSD/x86_64.
	* spvw.d (init_memory): Specify usable address range for FreeBSD/x86_64.

2017-03-12  Bruno Haible  <bruno@clisp.org>

	Fix build failure on x86 platforms with clang, e.g. FreeBSD/x86.
	* makemake.in (SP_ASMD, SP_ASMS): Set to non-empty also when using
	GCC or a GCC compatible compiler.

2017-03-11  Bruno Haible  <bruno@clisp.org>

	Don't attempt to use SINGLEMAP_MEMORY on OpenBSD/x86_64.
	* lispbibl.d (SINGLEMAP_MEMORY): Don't define if
	ADDRESS_RANGE_RANDOMIZED is defined.

2017-03-11  Bruno Haible  <bruno@clisp.org>

	Add support for generational GC on OpenBSD/x86.
	* lispbibl.d (ADDRESS_RANGE_RANDOMIZED): Don't define for 32-bit
	OpenBSD.
	* spvw.d (init_memory): For 32-bit OpenBSD, use the address range
	0x90000000..0xC8000000.

2017-03-11  Bruno Haible  <bruno@clisp.org>

	When warning about the address range, dump the process memory map.
	* spvw_mmap.d (dump_process_memory_map_callback,
	dump_process_memory_map): New functions.
	(warn_before_reserving_range): Invoke dump_process_memory_map.
